--- a/static/style.css
+++ b/static/style.css
@@ -32,7 +32,7 @@
 
 
 body {
-    background-color: #e6f2f1; /* Hafif mint-yeşil */
+    background-color: #ccc; /* Hafif mint-yeşil */
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: #2f3e46; /* Koyu mavi-gri */
     margin: 0;
